aside qismining yarmi tugatildi

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 <body>
     <nav></nav>
     <main>
-        <aside></aside>
+        <aside>
+<div class="aside__part-1">
+    <div class="aside__part-1-items"><i class="fa-solid fa-house"></i><p>Anasayfa</p></div>
+    <div class="aside__part-1-items"><i class="fa-solid fa-compass"></i><p>Keşfet</p></div>
+    <div class="aside__part-1-items"><i class="fa-solid fa-image"></i><p>Abonelikler</p></div> <hr style="margin-top:-1px ;">
+</div> 
+<div class="aside__part-2">
+    <div class="aside__part-1-items"><i class="fa-brands fa-youtube"></i><p>Kitaplık</p></div>
+    <div class="aside__part-1-items"><i class="fa-sharp fa-solid fa-clock-rotate-left"></i><p>Geçmiş</p></div>
+    <div class="aside__part-1-items"><i class="fa-regular fa-circle-play"></i><p>Videolarınız</p></div>
+    <div class="aside__part-1-items"><i class="fa-sharp fa-solid fa-clock-rotate-left"></i><p>Daha sonra izle</p></div>
+    <div class="aside__part-1-items"><i class="fa-solid fa-thumbs-up"></i><p>Beğendiğim videolar</p></div>
+    <div class="aside__part-1-items"><i class="fa-regular fa-square-caret-down"></i><p>Daha fazla göster</p></div> <hr style="margin-top:10px ;">
+</div>
+        </aside>
         <div class="carding__page">
         </div>
     </main>
